<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/buttonOpenList"
        style="@style/Widget.AppYAZ.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_open_list"
        app:layout_constraintTop_toBottomOf="@id/textMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <Button
        android:id="@+id/buttonToggleLang"
        style="@style/Widget.AppYAZ.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_toggle_lang"
        app:layout_constraintTop_toBottomOf="@id/buttonOpenList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        app:layout_constraintTop_toBottomOf="@id/buttonToggleLang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>