<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:clickable="true"
    tools:context=".DescriptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="?android:attr/colorBackground">

        <TextView
            android:id="@+id/ModelNameTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_description_name"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/modelNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/model_name"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ModelNameTitleTextView" />

        <TextView
            android:id="@+id/modelCostTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/model_description_cost"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelNameTextView" />

        <TextView
            android:id="@+id/modelCostTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/model_cost"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelCostTitleTextView" />

        <TextView
            android:id="@+id/modelDescriptionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/model_description_description"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelCostTextView" />

        <TextView
            android:id="@+id/modelDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/model_description"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:lineSpacingExtra="4sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonsRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelDescriptionTitleTextView" />

        <LinearLayout
            android:id="@+id/buttonsRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
				android:id="@+id/buttonEdit"
				style="@style/Widget.AppYAZ.Button.Secondary"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_weight="1"
				android:text="@string/action_edit" />

			<Button
				android:id="@+id/buttonBack"
				style="@style/Widget.AppYAZ.Button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_weight="1"
				android:text="@string/action_back" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>