<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:clickable="true"
    tools:context=".EditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="?android:attr/colorBackground">

        <TextView
            android:id="@+id/modelNameTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_edit_name"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/modelNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/model_edit_hint_name"
            android:inputType="text"
            android:singleLine="false"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="?android:attr/textColorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelNameTitleTextView" />

        <TextView
            android:id="@+id/modelCostTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/model_edit_cost"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modelNameEditText" />

        <EditText
            android:id="@+id/modelCostEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/model_edit_hint_cost"
            android:inputType="text"
            android:singleLine="false"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="?android:attr/textColorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modelCostTitleTextView" />

        <TextView
            android:id="@+id/modelDescriptionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/model_edit_description"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modelCostEditText" />

        <EditText
            android:id="@+id/modelDescriptionEditTextMultiLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/model_edit_hint_description"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="?android:attr/textColorSecondary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonsRowEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelDescriptionTitleTextView" />

        <LinearLayout
            android:id="@+id/buttonsRowEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonSave"
                style="@style/Widget.AppYAZ.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/action_save" />

            <Button
                android:id="@+id/buttonBackEdit"
                style="@style/Widget.AppYAZ.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/action_back" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>